{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 89,
  "lineage": "4da6ad69-a195-18f4-fd90-0403bfd69096",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/Azuredevops-lb/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/Azuredevops-public-ip"
              }
            ],
            "id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/Azuredevops-lb",
            "location": "eastus",
            "name": "Azuredevops-lb",
            "resource_group_name": "Azuredevops",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "resources": "resources"
            }
          },
          "dependencies": [
            "azurerm_public_ip.main",
            "data.azurerm_resource_group.Azuredevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/Azuredevops-lb/backendAddressPools/Azuredevops-lb-backend-pool",
            "loadbalancer_id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/Azuredevops-lb",
            "name": "Azuredevops-lb-backend-pool"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.main",
            "data.azurerm_resource_group.Azuredevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/Azuredevops-0-nic",
            "internal_domain_name_suffix": "qb35hy4a5y2e5nxgbvyxjwibkg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/Azuredevops-network/subnets/Azuredevops-subnet"
              }
            ],
            "location": "eastus",
            "name": "Azuredevops-0-nic",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "Azuredevops",
            "tags": {
              "resources": "resources"
            }
          },
          "dependencies": [
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.Azuredevops"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/Azuredevops-1-nic",
            "internal_domain_name_suffix": "qb35hy4a5y2e5nxgbvyxjwibkg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/Azuredevops-network/subnets/Azuredevops-subnet"
              }
            ],
            "location": "eastus",
            "name": "Azuredevops-1-nic",
            "private_ip_address": "10.0.2.6",
            "private_ip_addresses": [
              "10.0.2.6"
            ],
            "resource_group_name": "Azuredevops",
            "tags": {
              "resources": "resources"
            }
          },
          "dependencies": [
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.Azuredevops"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/Azuredevops-2-nic",
            "internal_domain_name_suffix": "qb35hy4a5y2e5nxgbvyxjwibkg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/Azuredevops-network/subnets/Azuredevops-subnet"
              }
            ],
            "location": "eastus",
            "name": "Azuredevops-2-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "Azuredevops",
            "tags": {
              "resources": "resources"
            }
          },
          "dependencies": [
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.Azuredevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/Azuredevops-lb/backendAddressPools/Azuredevops-lb-backend-pool",
            "id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/Azuredevops-0-nic/ipConfigurations/internal|/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/Azuredevops-lb/backendAddressPools/Azuredevops-lb-backend-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/Azuredevops-0-nic"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.Azuredevops"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/Azuredevops-lb/backendAddressPools/Azuredevops-lb-backend-pool",
            "id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/Azuredevops-1-nic/ipConfigurations/internal|/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/Azuredevops-lb/backendAddressPools/Azuredevops-lb-backend-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/Azuredevops-1-nic"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.Azuredevops"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/Azuredevops-lb/backendAddressPools/Azuredevops-lb-backend-pool",
            "id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/Azuredevops-2-nic/ipConfigurations/internal|/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/Azuredevops-lb/backendAddressPools/Azuredevops-lb-backend-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/Azuredevops-2-nic"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.Azuredevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/Azuredevops-nsg",
            "location": "eastus",
            "name": "Azuredevops-nsg",
            "resource_group_name": "Azuredevops",
            "security_rule": [],
            "tags": {
              "resources": "resources"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.Azuredevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowInboundLB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/Azuredevops-nsg/securityRules/Azuredevops-inbound-allow-lb-SR",
            "name": "Azuredevops-inbound-allow-lb-SR",
            "network_security_group_name": "Azuredevops-nsg",
            "priority": 103,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "AzureLoadBalancer",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "data.azurerm_resource_group.Azuredevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowInboundVM",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/Azuredevops-nsg/securityRules/Azuredevops-inbound-allow-vm-SR",
            "name": "Azuredevops-inbound-allow-vm-SR",
            "network_security_group_name": "Azuredevops-nsg",
            "priority": 101,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "data.azurerm_resource_group.Azuredevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowOutboundVM",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/Azuredevops-nsg/securityRules/Azuredevops-outbound-allow-vm-SR",
            "name": "Azuredevops-outbound-allow-vm-SR",
            "network_security_group_name": "Azuredevops-nsg",
            "priority": 102,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "data.azurerm_resource_group.Azuredevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "DenyInboundInternet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "Internet",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/Azuredevops-nsg/securityRules/Azuredevops-inbound-deny-SR",
            "name": "Azuredevops-inbound-deny-SR",
            "network_security_group_name": "Azuredevops-nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "0.0.0.0/0",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "data.azurerm_resource_group.Azuredevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/Azuredevops-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.124.189.247",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "Azuredevops-public-ip",
            "resource_group_name": "Azuredevops",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "resources": "resources"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.Azuredevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/Azuredevops-network/subnets/Azuredevops-subnet",
            "name": "Azuredevops-subnet",
            "resource_group_name": "Azuredevops",
            "virtual_network_name": "Azuredevops-network"
          },
          "dependencies": [
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.Azuredevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e3f37b80-fec0-4f38-b6e6-0d7174d90156",
            "id": "/subscriptions/622411f9-056b-4cd2-8612-cd26091f1c5c/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/Azuredevops-network",
            "location": "eastus",
            "name": "Azuredevops-network",
            "resource_group_name": "Azuredevops",
            "tags": {
              "resources": "resources"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.Azuredevops"
          ]
        }
      ]
    }
  ]
}